	  include $(topdir) and $(hdrdir) to search path.

Tue Feb 22 23:51:45 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c: get rid of warnings caused by a bug of VC.

Tue Feb 22 23:50:26 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (ruby_signal, ruby_nativethread_signal): must be valid as
	  expressions, not only statements.

Tue Feb 22 07:24:57 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): identifier after dot must not be a variable.

Mon Feb 21 18:31:12 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* signal.c: Standard signal handlers ignore signals on non-Ruby native
	  threads. When a handler is entried with ruby_signal() (like as the
	  standard signal handlers), the handler for the signal is marked as
	  it cannot accept non-Ruby native threads. If a handler can treat all
	  signals on all native threads, please use ruby_nativethread_signal()
	  to entry it.

Sun Feb 20 00:48:48 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (URI::FTP#buffer_open): access mechanism
	  re-implemented according to RFC 1738.
	  reported by Guillaume Marcais.  [ruby-talk:131650]

Sat Feb 19 18:46:56 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRbObject#respond_to?): take two arguments.
	  [ruby-dev:25722]

	* test/drb/drbtest.rb: ditto.

Sat Feb 19 13:52:02 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb: call OpenSSL::SSL::SSLSocket#post_connection_check
	  after connection is made.

Sat Feb 19 13:31:28 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extract_makefile): remove no longer existing installed
	  files.

	* lib/mkmf.rb (install_dirs): return installation directory list.

	* lib/mkmf.rb (create_makefile): reverted wrongly removed lines.

Sat Feb 19 01:28:56 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/bigdecimal/lib/bigdecimal/newton.rb: resolve LoadError.
	  [ruby-dev:25685]

	* ext/bigdecimal/sample/linear.rb: ditto.
