@@ -19,6 +19,11 @@ Tue Feb 22 23:50:26 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 	* signal.c (ruby_signal, ruby_nativethread_signal): must be valid as
 	  expressions, not only statements.
 
+Tue Feb 22 12:54:13 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* eval.c (rb_thread_start_0): update curr_thread before raising
+	  TAG_THREAD.  [ruby-dev:25712]
+
 Tue Feb 22 07:24:57 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (parser_yylex): identifier after dot must not be a variable.
